--- a/public/js/bower.json
+++ b/public/js/bower.json
@@ -19,6 +19,8 @@
     "tests"
   ],
   "dependencies": {
-    "d3": "^3.5.17"
+    "d3": "^3.5.17",
+    "leaflet": "^0.7.7",
+    "backbone": "^1.3.3"
   }
 }
